Delete and toggle

--- a/index.html
+++ b/index.html
@@ -5,76 +5,41 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Browser extensions manager UI</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  <link rel="stylesheet" href="./styles/style.css">
+  <title>Browser extension</title>
 </head>
-<body>
-
-  Extensions List
-
-  All
-  Active
-  Inactive
-
-  <!-- If you plan to use the JSON file to populate the data dynamically, you can delete the content below -->
-
-  DevLens
-  Quickly inspect page layouts and visualize element boundaries.
-  Remove
-
-  StyleSpy
-  Instantly analyze and copy CSS from any webpage element.
-  Remove
-
-  SpeedBoost
-  Optimizes browser resource usage to accelerate page loading.
-  Remove
-
-  JSONWizard
-  Formats, validates, and prettifies JSON responses in-browser.
-  Remove
-
-  TabMaster Pro
-  Organizes browser tabs into groups and sessions.
-  Remove
-
-  ViewportBuddy
-  Simulates various screen resolutions directly within the browser.
-  Remove
-
-  Markup Notes
-  Enables annotation and notes directly onto webpages for collaborative debugging.
-  Remove
-
-  GridGuides
-  Overlay customizable grids and alignment guides on any webpage.
-  Remove
-
-  Palette Picker
-  Instantly extracts color palettes from any webpage.
-  Remove
-
-  LinkChecker
-  Scans and highlights broken links on any page.
-  Remove
-
-  DOM Snapshot
-  Capture and export DOM structures quickly.
-  Remove
-
-  ConsolePlus
-  Enhanced developer console with advanced filtering and logging.
-  Remove
-
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+<body class="page">
+  <header class="header">
+    <img src="./assets/images/logo.svg" alt="Лого">
+    <img src="./assets/images/icon-sun.svg" alt="Солнце">
+  </header>
+  <div class="context__area">
+    <button type="button" class="context__button context__button_is-active">All</button>
+    <button type="button" class="context__button">Active</button>
+    <button type="button" class="context__button">Inactive</button>
   </div>
+  <main class="content">
+  </main>
+
+  <template id="card-template">
+    <div class="card">
+      <div class="description">
+        <img class="card__image">
+        <div class="des__fnt">
+          <h2 class="card__header"></h2>
+          <span class="card__article"></span>
+        </div>
+      </div>
+    <div class="card__footer">
+      <button type="button" class="remove__button">Remove</button>
+      <label class="toggle-switch">
+        <input type="checkbox" checked class="card__checkbox"> <!-- checked = Active -->
+        <span class="slider"></span>
+        <span class="labels" data-on="Active" data-off="Inactive"></span>
+      </label>
+    </div>
+    </div>
+  </template>
+  <script src="./scripts/script.js"></script>
 </body>
 </html>
